--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<div id="info">
 		Hoi!
 	</div>
-	<a id="login" style="display: none;" href="https://discordapp.com/api/oauth2/authorize?client_id=648179533115293697&redirect_uri=http%3A%2F%2Fnoblewolf42.com%3A3000&response_type=code&scope=connections">Identify Yourself</a>
+	<a id="login" style="display: none;" href="https://discordapp.com/api/oauth2/authorize?client_id=648179533115293697&redirect_uri=http%3A%2F%2Fnoblewolf42.com%3A3000&response_type=code&scope=connections%20identify%20email">Identify Yourself</a>
 	<script>
 		function generateRandomString() {
 			const rand = Math.floor(Math.random() * 10);
